# cleanmedia

./: .dir-locals.el  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  cleanmedia  cleanmedia.py  pyproject.toml
.gitea/workflows/: ci.yml  deploy.yml
.github/workflows/: ci.yml
tests/: test_cleanmedia.py
