[project]
name = "cleanmedia"
version = "0.1.0"
description = ""
authors = [{ name = "Roger Gonzalez", email = "roger@rogs.me" }]
requires-python = "~=3.9"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "psycopg2-binary>=2.9.10,<3",
    "pyyaml>=6.0.2,<7",
]

[dependency-groups]
dev = [
    "python-lsp-ruff>=2.2.2,<3",
    "pre-commit>=4.0.1,<5",
    "python-lsp-server>=1.12.0,<2",
    "ruff>=0.8.1,<0.9",
    "mypy>=1.13.0,<2",
    "pylsp-mypy>=0.6.9,<0.7",
    "types-pyyaml>=6.0.12.20240917,<7",
    "types-psycopg2>=2.9.21.20241019,<3",
    "pytest>=8.3.4,<9",
    "pytest-mock>=3.14.0,<4",
    "pytest-coverage>=0.0,<0.1",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = ["migrations"]

[tool.pylsp-mypy]
enabled = true
live_mode = true
report_progress = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]

line-length = 121
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "PL", "B", "A", "C4", "TID", "ERA", "RET", "W", "C90", "ARG", "Q", "FLY", "SIM", "COM", "D"]
ignore = ["E402", "PLW2901"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "pep257"
